--- a/DentalClinicManagementApp/Resources/SharedResource.pt.resx
+++ b/DentalClinicManagementApp/Resources/SharedResource.pt.resx
@@ -150,6 +150,9 @@
   <data name="Create" xml:space="preserve">
     <value>Criar</value>
   </data>
+  <data name="Create a new account." xml:space="preserve">
+    <value>Criar uma nova conta.</value>
+  </data>
   <data name="Create New" xml:space="preserve">
     <value>Criar novo(a)</value>
   </data>
